--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,5 +23,8 @@
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.10",
     "prisma": "^6.14.0"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^10.0.0"
   }
 }
