--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "seed": "node prisma/seed.js"
+    "seed": "node prisma/seed.js",
+    "prisma": "prisma"
   },
   "keywords": [],
   "author": "",
