--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,7 +7,9 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "seed": "node prisma/seed.js",
-    "prisma": "prisma"
+    "prisma": "prisma",
+    "migrate": "npx prisma migrate dev",
+    "generate": "npx prisma generate"
   },
   "keywords": [],
   "author": "",
